--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.alihamza.myapplication">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,13 +14,16 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".DriverLoginActivity" />
+
         <activity android:name=".MapActivity" />
-        <activity android:name=".CustomerLoginActivity"></activity>
+        <activity android:name=".CustomerLoginActivity" />
+        <activity android:name=".CustomerMapActivity" />
+        <activity android:name=".CustomerSettingsActivity"/>
+        <activity android:name=".DriverMapActivity" />
     </application>
 
 </manifest>
